--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,14 +1,16 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
-  width: 65%;
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
   padding-bottom: 64px;
+  /* Added by Beth */
+  width: 65%;
 }
 
 .title {
@@ -25,7 +27,25 @@
 }
 
 .characterWrapper {
+  /* Added by Beth */
+  position: fixed;
+  top: 15%;
+  left: 60%;
+  bottom: 5%;
+  min-height: 500px;
 }
 
 .controlColumn {
+  /* Added by Beth */
+  width: 50%;
+}
+
+/* Added by Beth */
+.perspectiveEffect {
+  position: fixed;
+  top: 60%;
+  left: 0px;
+  height: 40%;
+  width: 100%;
+  background-color: hsl(195deg, 20%, 86%);
 }
